# Saidso

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
Docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  ROADMAP.md
examples/: john_doe_demo.py  livekit_adapter.py  openai_tooluse.py  quickstart.py
saidso/: __init__.py  __main__.py  attestation.py  cli.py  context.py  grounding.py  matcher.py  observe.py  policy.py  provenance.py  result.py  testing.py  transcript.py
saidso/_docs/: integrate.md  observability.md  overview.md  policies.md  quickstart.md  reads.md  testing.md  writes.md
saidso/_matching/: matcher.py  normalize.py
saidso/_templates/: GETTING_STARTED.md  quickstart.py
saidso/speech/: __init__.py  monitor.py  render.py
scripts/: deploy.py
tests/: test_cli.py  test_fuzz_fallback.py  test_grounded.py  test_hardening.py  test_harness.py  test_matcher.py  test_monitor.py  test_normalize.py  test_observe.py  test_production.py  test_provenance.py  test_render.py
